# archery_vision

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/core/: device.py  log.py  model.py  pose.py  video.py
src/enums/: action_state.py
src/models/: yolo_bow.py
src/webui/: app.py  demo.py
